# code-fractions

./: README.md
FPGA/: README.adoc  README.txt  what_are_them.txt
FPGA/data-packing/fragment_to_chunk/: fragment_to_chunk.sv
FPGA/multi-dim-array/: multi-dim-array.tcl
FPGA/multi-dim-array/hdl/: main_pkg.sv  main_tb.sv
FPGA/pattern-gen/saw_tooth_wav_p4/: saw_tooth_wav_p4.sv
FPGA/sim/MtySvUtils/: MtyNsSvUtils.svh
FPGA/sim/PeakRDL_trial/: README.md
FPGA/sim/axi_vip/: README.md
FPGA/sim/uvm_reg_model_trial/: helpfull_web_pages.md  現状.md
FPGA/synth/macros/: mty_sv_macros.svh
FPGA/synth/multi-dim-array/: .gitignore  multi-dim-array.tcl
FPGA/synth/out_reg_layer/: ds_side_if_out_reg_layer.sv  ds_side_if_out_reg_layer.svh  ds_side_reg_layer.sv  ds_side_reg_layer.svh  us_side_if_out_reg_layer.sv  (+3 more)
Neumann-type-computer/mathematics/: TrianglePart.nb  binSearch.jl  loadArrayFromFile.jl
Neumann-type-computer/text-processing/: print_integer_in_binary_format.cpp  xil_printf_ext.cpp
binary-data-operation/: putScalarToByteArray.hpp  setBits.hpp
command-line-parsing/by_cxxopts/: main.cpp
command-line/example_parse_argument/: common.hpp
control-theory/derivative_approximation/: approxDeriv.m
data-structure/RingStack/: CHANGELOG.md  RingStack.jl  RingStack_0.2.1.jl  RingStack_0.3.0.jl  RingStack_0.3.1.jl  RingStack_v0.1.0.jl  test.ipynb
file-operation/: load_binary_file.rs
mathematics/: ChainConds.nb  countTail0Bits.hpp
misc/: std_array_dataSize.hpp
multi-threading/ThreadPool/: CMakeLists.txt  README.md
multi-threading/ThreadPool/demo/: CMakeLists.txt  main_ExecutableTest.cpp  main_queueTest.cpp  main_threadPool.cpp
multi-threading/ThreadPool/include/: ThreadPool.hpp
multi-threading/ThreadPool/src/: CMakeLists.txt  ThreadPool.cpp
signal-processing/ExpSmoothingFilter/: CHANGELOG.md  NaNCheck_0.1.0.jl  include.jl
signal-processing/FirFilter/: CHANGELOG.md  FirFilter_0.1.0.jl  FirFilter_0.2.0.jl  FirFilter_0.2.1.jl  test.ipynb
signal-processing/Resize1dArray/: test.ipynb
text-processing/: print_integer_in_binary_format.cpp  replace.py
(+612 files in other folders)
